--- a/lesson_5/css/fonts.css
+++ b/lesson_5/css/fonts.css
@@ -22,7 +22,7 @@
    src: url(../fonts/OpenSans-Italic.woff) format("woff");
    font-display: swap;
 	font-weight: 400;
-	font-style: normal;
+	font-style: italic;
 }
 
 @font-face {
