--- a/lesson_9/css/style.css
+++ b/lesson_9/css/style.css
@@ -456,6 +456,7 @@ header, footer{
    height: 27px;
    background: url("../img/vector.svg") left no-repeat;
    margin-right: 8px;
+   margin-left: -35px;
 }
 
 .benefits-txt li:hover::before{
@@ -468,8 +469,7 @@ header, footer{
 
 .benefits-txt li{
    line-height: normal;
-   height: 27px;
-   vertical-align: center;
+   margin-left: 35px;
 }
 
 .benefits{
@@ -562,6 +562,7 @@ h2{
    font-weight: 600;
    line-height: normal;
    margin-bottom: 12px;
+   margin-left: 46px;
 }
 
 .experience, .awards{
@@ -602,6 +603,7 @@ h2{
    height: 27px;
    background: url("../img/vector.svg") left no-repeat;
    margin-right: 19px;
+   margin-left: -46px;
 }
 
 .plan h3 ~ p{
@@ -791,6 +793,11 @@ h2{
    font-size: 46px;
    line-height: 1.13;
    margin-bottom: 31px;
+}
+
+.jew1:hover .pic, .jew2:hover .pic{
+   border: 2px solid #000000;
+   background-color: #78473b98;
 }
 
 /* Jewels style end  */
