--- a/lesson_9/css/style.css
+++ b/lesson_9/css/style.css
@@ -92,6 +92,7 @@ header, footer{
    border: 2px solid rgb(67, 100, 2);
    padding: 5px 15px;
    background-color: #083697;
+   display: inline-block;
 }
 
 .link3:hover{
@@ -100,6 +101,7 @@ header, footer{
 }
 
 .figure{
+   display: block;
    font-size: 50px;
    padding-top: 50px;
    color: #fff;
@@ -116,7 +118,7 @@ header, footer{
 
 .block4{
    padding: 10px;
-   font-style: 20px;
+   font-size: 20px;
    background-color: #a10000;
    color: #fff;
    max-width: 1440px;
@@ -464,12 +466,12 @@ header, footer{
 }
 
 .benefits-txt li:not(:last-child){
-   margin-bottom: 30px;
+   padding-bottom: 30px;
 }
 
 .benefits-txt li{
    line-height: normal;
-   margin-left: 35px;
+   padding-left: 35px;
 }
 
 .benefits{
@@ -562,7 +564,7 @@ h2{
    font-weight: 600;
    line-height: normal;
    margin-bottom: 12px;
-   margin-left: 46px;
+   padding-left: 46px;
 }
 
 .experience, .awards{
@@ -607,7 +609,7 @@ h2{
 }
 
 .plan h3 ~ p{
-   margin-left: 46px;
+   padding-left: 46px;
 }
 
 .plan a:hover{
@@ -647,6 +649,7 @@ h2{
    padding: 58px 43px;
    max-width: 386px;
    background: #F4F4F4;
+   transition: transform 3s ease 0s;
 }
 
 .card-title{
@@ -682,15 +685,18 @@ h2{
 
 .card::before{
    display: block;
+   margin: 0 auto;
    content: "";
    width: 100%;
    height: 72px;
+   width: 72px;
    background: url("../img/card1.svg") top  / 72px 72px no-repeat;
    margin-top: -94px;  /* padding-top height + icon heiight / 2 */
    margin-bottom: 22px;
 }
 
 .card2::before{
+   transform: tras;
    background: url("../img/card2.svg") top  / 72px 72px no-repeat;
 }
 
@@ -776,22 +782,16 @@ h2{
    max-width: 334px;
    max-height: 381px;
    border: 1px solid #000;
-   padding: 9px 0 0 10px;
 }
 
-/* .pic1{
-   background: url("../img/jew1.jpg") 10px 9px no-repeat;
-}
-.pic2{
-   background: url("../img/jew2.jpg") 10px 9px no-repeat;
-   overflow: visible;
-} */
 
-/* .pic1 img, .pic2 img{
-   padding: 9px 0 0 10px;
+
+.jewels .pic img{
+   /* object-fit: cover; */
    margin: 9px 0 0 10px;
-   max-width: 334px;
-} */
+   height: 381px;
+   width: 100%;
+}
 
 .pic1, .pic2{
    margin-bottom: 34px;
@@ -814,4 +814,37 @@ h2{
    background-color: #78473b98;
 }
 
+/* 
+.paralax{
+   max-width: 1440px;
+   height: 100vh;
+   margin: 0 auto;
+   margin-bottom: 500px;
+   position: relative;
+   background-color: #5c5c5c;
+   
+}
+
+
+
+.withoutme {
+   position: absolute;
+   z-index: 1;
+}
+.mountains1 {
+   position: absolute;
+   z-index: 2;
+   bottom: 100;
+}
+.grass-par {
+   position: absolute;
+   z-index: 3;
+   bottom: 0;
+}
+.me {
+   position: absolute;
+   z-index: 4;
+   bottom: 0;
+   left: 50%;
+} */
 /* Jewels style end  */
