--- a/lesson_15/css/fonts.css
+++ b/lesson_15/css/fonts.css
@@ -26,6 +26,15 @@
    font-weight: 700;
    font-style: normal;
 }
+@font-face {
+      font-family: 'Causten';
+      src: 
+      url('../fonts/Causten-Semi-Bold.woff2') format('woff2'),
+      url('../fonts/Causten-Semi-Bold.woff') format('woff');
+   font-display: swap;
+   font-weight: 600;
+   font-style: normal;
+}
 
 @font-face {
    font-family: 'Core Sans C';
