--- a/lesson_15/css/style.css
+++ b/lesson_15/css/style.css
@@ -426,6 +426,9 @@
    flex-grow: 1;
    align-items:center;
 }
+.info-order__name:hover{
+   text-decoration: underline;
+}
 
 .info-order__decr{
    display: flex;
