--- a/lesson_19/css/style.css
+++ b/lesson_19/css/style.css
@@ -224,7 +224,7 @@ header, footer{
 
 .content{
    display: grid;
-   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+/*    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); */
    grid-template-columns: repeat(6, 1fr);
    grid-template-rows: 1fr;
    gap: 20px;
