--- a/lesson_20/scss/style.scss
+++ b/lesson_20/scss/style.scss
@@ -135,7 +135,7 @@ body{
          &:hover{
             transition: 0.3s ease-in-out;
             color: #a0a0a0;
-            transform: scale(1.05) rotate(10deg);
+            transform: scale(1.05) rotate(-10deg);
          }
       }
    }
@@ -243,7 +243,7 @@ body{
 /* -------------------- HERO----------------*/
 .hero {
    background: 
-   url(../img/hero-bg.png) center / cover no-repeat;
+   url(../img/hero-bg.webp) center / cover no-repeat;
    height: 100vh;/*  трішки чітерства😄 */
    color: #FFF;
    text-align: center;
@@ -394,7 +394,7 @@ body{
    }
 }
 .wwd {
-
+   margin-bottom: 94px;
    &__pretitle {
       color: #FAC70F;
       font-family: Inter;
@@ -409,7 +409,7 @@ body{
       font-size: 64px;
       font-weight: 400;
       line-height: 1.46;
-      margin-bottom: 94px;
+     
    }
 }
 .right-side {
@@ -439,7 +439,7 @@ body{
 
 @media(max-width: 1024px){
    .wwd {
-
+      margin-bottom: 54px;
       &__pretitle {
          font-size: 28px;
       }
@@ -447,7 +447,7 @@ body{
       &__title {
         
          font-size: 44px;
-         margin-bottom: 54px;
+       
       }
    }
 }
@@ -461,13 +461,14 @@ body{
       }
    }
    .wwd {
+      margin-bottom: 24px;
       &__pretitle {
          font-size: 18px;
       }
    
       &__title {
          font-size: 26px;
-         margin-bottom: 24px;
+        
       }
    }
 
@@ -506,7 +507,10 @@ body{
 
 
 .section-4 {
-   padding: 13.9% 0%; /* 167px/1200 */
+   padding-top: 13.9%; /* 167px/1200 */
+   background-image: url(../img/line-sec4.webp);
+   background-repeat: no-repeat;
+   background-position: right bottom 167px;
    &__container {
    }
 
@@ -536,6 +540,7 @@ body{
    }
 }
 .cards-section-4 {
+   margin-bottom: 160px;
    display: grid;
    grid-template-columns: repeat(auto-fit,minmax(270px,1fr));
    justify-items: center;
@@ -567,8 +572,356 @@ body{
    }
 
    &__name {
+      transition: 0.3s ease-in-out;
+      @media(any-hover:hover){
+         &:hover{
+         text-decoration: underline;
+         transform: scale(1.05);
+      }
+      }
    }
 
    &__price {
    }
 }
+
+@media(max-width: 500px){
+   .title{
+      margin-bottom: 30px;
+      &__item{
+         font-size: 42px;
+      }
+
+      &__sub-item{
+         font-size: 22px;
+      }
+   }
+}
+
+
+/* ------------------SECTION-5 ------------------*/
+
+
+.section-5 {
+   margin-bottom: 167px;
+   background-image: url("../img/hendrcafted-line.svg");
+   background-repeat: no-repeat;
+   background-position: left top 45px;
+   &__container {
+   }
+
+   &__text {
+   }
+
+   &__cards-hendcrafted {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 3.75%; /* 45px/1200 */
+   }
+}
+.text {
+
+   &__wwd {
+      margin-bottom: 49px;
+   }
+}
+.wwd {
+
+   &__pretitle {
+   }
+
+   &__title {
+   }
+}
+.hendcrafted-cards {
+}
+.hendcrafted-card {
+   &__pic {
+      margin-bottom: 25px;
+   }
+
+   &__descr {
+      color: #FFF;
+      font-family: Inter;
+      font-size: 20px;
+      font-weight: 400;
+      line-height: 1.8 /* 36px */
+   }
+}
+
+.hendcrafted-card--01{
+   padding-top: 39px;
+   img{
+      width: 100%;
+/*       height: 100%; */
+      object-fit: cover;
+      aspect-ratio: 370 / 552;
+   }
+}
+.hendcrafted-card--02{
+   img{
+      width: 100%;
+/*       height: 100%; */
+      object-fit: cover;
+      aspect-ratio: 336 / 465;
+   }
+
+}
+.hendcrafted-card--03{
+   padding-top: 118px;
+   img{
+      width: 100%;
+/*       height: 100%; */
+      object-fit: cover;
+      aspect-ratio: 360 / 523;
+   }
+}
+
+
+@media(max-width: 960px){
+   .hendcrafted-card {
+      &__descr {
+         font-size: 16px;
+      }
+   }
+   
+}
+@media(max-width: 768px){
+   .hendcrafted-card {
+      padding: 0;
+      &__descr {
+         font-size: 16px;
+      }
+      &__pic {
+         margin-bottom: 10px;
+      }
+   }
+   .section-5 {
+      // margin-bottom: 80px;
+      &__text {
+         font-size: 30px;
+      }
+   
+   }
+}
+
+
+/*------------------------- SECTION-6---------------------- */
+.section-6__title{
+   text-align: left;
+   margin-bottom: 60px;
+}
+
+.section-6 {
+   margin-bottom: 167px;
+   background-image: url("../img/section6-line.webp");
+   background-repeat: no-repeat;
+   background-position: right top;
+   &__content {
+
+   }
+}
+.content {
+   display: grid;
+   gap: 3.833333%; /* 46px/1200 */
+   grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
+   &__card-item {
+     
+   }
+}
+.card-item {
+
+   &__pic {
+      img{
+         width: 100%;
+         height: 100%;
+         object-fit: cover;
+         aspect-ratio: 364 / 256;
+      }
+   }
+
+   &__info {
+   }
+}
+.info {
+      display: flex;
+      flex-direction: column;
+      gap: 23px;
+      background-color: #050314;
+      border-bottom-right-radius: 15px;
+      border-bottom-left-radius: 15px;
+      padding: 24px 22px 18px 24px;
+      border-bottom: 1px solid rgba(232, 239, 237, 0.29);
+      border-left: 1px solid rgba(232, 239, 237, 0.29);
+      border-right: 1px solid rgba(232, 239, 237, 0.29);
+   &__name {
+      font-family: DM Serif Text;
+      font-size: 18px;
+      font-weight: 400;
+   }
+
+   &__middle {
+      font-family: Inter;
+      font-size: 16px;
+      font-weight: 400;
+      display: flex;
+      justify-content: space-between;
+   }
+
+   &__date {
+      &::before{
+         content: "";
+         width: 17px;
+         height: 17px;
+         background: url("../img/date.svg") 0 0 / cover no-repeat
+         
+
+      }
+   }
+
+   &__min-read {
+   }
+
+   &__read-more {
+      width: 80px;
+      font-family: DM Serif Text;
+      font-size: 16px;
+      font-weight: 400;
+      text-decoration-line: underline;
+      transition: 0.3s ease-in-out;
+      @media(any-hover:hover){
+         &:hover{
+         transform: scale(1.05);
+         color: #aeaeae;
+      }
+      }
+      
+   }
+}
+
+
+@media(max-width: 768px){
+   .section-6__title{
+      margin-bottom: 30px;
+   }
+}
+
+
+/* --------------------FOOTER ------------------*/
+.footer {
+   background-image: url("../img/footer-line.webp");
+   background-repeat: no-repeat;
+   background-position:  left bottom;
+   padding-top: 40px;
+   border-top: 1px solid rgba(249, 249, 249, 0.22);
+   text-align: center;
+   padding-bottom: 42px;
+  
+   &__container {
+   }
+
+   &__contacts {
+   }
+
+   &__links {
+   }
+}
+.contacts {
+   display: flex;
+   align-items: center;
+   flex-direction: column;
+   gap: 15px;
+   font-family: Cormorant Infant;
+   font-size: 30px;
+   font-weight: 500;
+   line-height: 1.4; /* 42px */
+   margin-bottom: 50px;
+   &__phone {
+     
+   }
+
+   &__mail {
+      font-size: 40px;
+      font-weight: 700;
+   }
+
+   &__adress {
+      font-family: Inter;
+      font-size: 16px;
+      font-weight: 400;
+      max-width: 330px;
+   }
+
+   &__socials {
+      display: flex;
+      column-gap: 15px;
+    
+      
+   }
+
+   &__link {
+      transition: 0.3s ease-in-out;
+      @media(any-hover:hover){
+         &:hover{
+         transform: scale(1.1);
+      }
+      }
+      img{
+         width: 27px;
+         height: 27px;
+      }
+   }
+}
+.links-footer {
+   display: flex;
+   gap: 4.166667%; /* 50px/1200 */
+   justify-content: center;
+ 
+   &__item {
+      font-family: Inter;
+      font-size: 18px;
+      font-weight: 500;
+      line-height: 1.4; /* 25.2px */
+      text-decoration-line: underline;
+      transition: 0.3s ease-in-out;
+      @media(any-hover:hover){
+         &:hover{
+         transform: scale(1.05);
+      }
+      }
+   }
+}
+
+
+@media(max-width:480px){
+   .footer {
+
+		&__contacts {
+         font-size: 26px;
+		}
+
+		&__links {
+		}
+   }
+   .contacts {
+
+      &__phone {
+      }
+
+      &__mail {
+         font-size: 24px;
+      }
+
+      &__adress {
+      }
+
+      &__socials {
+      }
+
+      &__link {
+      }
+   }
+
+
+}
+
